[package]
name = "uxn-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uxncli"
path = "src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[profile.release]
opt-level = "s"
strip = "symbols"
panic = "abort"
lto = true
codegen-units = 1
